--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -7,7 +7,7 @@
         urlChangeAjaxItens = "{{=URL('change_ajax_itens')}}",
         buttonDefinitionReady = '{{=T("DR")}}',
         buttonSendSprint = '{{=T("Send to Sprint")}}',
-        buttonSendStory = '{{=T("Send to Story")}}',
+        buttonBackBacklog = '{{=T("Back to Backlog")}}',
         buttonTask = '{{=T("Task")}}',
         projectID = '{{=project.id}}',
         msg = {
@@ -229,7 +229,7 @@
                                     {{pass}}
                                 </li><!-- story -->
                                 <div class="buttons_footer">
-                                    <button class="btn btn-danger pull-right send_story_backlog"><i class="icon-circle-arrow-left icon-white"></i> {{=T("Send to Story")}}</button>
+                                    <button class="btn btn-danger pull-right back_backlog"><i class="icon-circle-arrow-left icon-white"></i> {{=T("Back to Backlog")}}</button>
                                     <div class="clearfix"></div>
                                 </div>
                             </ul>
