--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -87,7 +87,7 @@
                     <a href="#"><i class="icon icon-th-list"></i> <span>{{=T('My Projects')}}</span> <span class="label">{{=len(all_projects)}}</span></a>
                     <ul>
                         {{for i in all_projects:}}
-                            <li class='{{=g_pagina_atual("default/product_backlog/%s" %i.id,"active")}}'><a href='{{=URL(c="default",f="product_backlog",args=[i.id])}}'>{{=i.name}}</a></li>
+                            <li class='{{=g_pagina_atual("default/product_backlog/%s" %i.id,"active")}} {{=g_pagina_atual("default/board/%s" %i.id,"active")}}'><a href='{{=URL(c="default",f="product_backlog",args=[i.id])}}'>{{=i.name}}</a></li>
                         {{pass}}
                     </ul>
                 </li>                
