--- a/static/css/product_backlog.css
+++ b/static/css/product_backlog.css
@@ -60,22 +60,39 @@ a {
 }
 
 .buttons_footer {
-    background-color:rgb(235, 233, 233);
-    padding: 10px 10px 10px 0px;
+    padding: 5px 5px 5px 0px;
     border-top: 1px solid #ccc;
+    background: #b5b5b5;
+    border-bottom: 1px solid #949494;
+    border-radius: 0 0 5px 5px;
+    background-image: -webkit-linear-gradient(top, #dadada, #b1b1b1);
+    background-image: -moz-linear-gradient(top, #dadada, #b1b1b1);
+    background-image: -o-linear-gradient(top, #dadada, #b1b1b1);
+    background-image: linear-gradient(to bottom, #dadada, #b1b1b1);
+    -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.15);
+    box-shadow: inset 0 1px rgba(255, 255, 255, 0.15);
 }
 
 .story_container {
-    list-style: none;
     margin: 0;
     margin-bottom: 20px;
-    border: 2px solid #ccc;
+    list-style: none;
     border-radius: 5px;
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15), 0 0 0 1px rgba(0, 0, 0, 0.1);
 }
 
 .story_header {
+    padding: 10px 0px;
     padding-left: 20px;
-    background-color: rgb(235, 233, 233);
+    font-size: 13px;
+    text-transform: uppercase;
+    border-radius: 5px 5px 0 0;
+    background-image: -webkit-linear-gradient(top, #dadada, #b1b1b1);
+    background-image: -moz-linear-gradient(top, #dadada, #b1b1b1);
+    background-image: -o-linear-gradient(top, #dadada, #b1b1b1);
+    background-image: linear-gradient(to bottom, #dadada, #b1b1b1);
+    -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.15);
+    box-shadow: inset 0 1px rgba(255, 255, 255, 0.15);
 }
 
 .buttons_container {
@@ -104,15 +121,24 @@ a {
 
 .definition_ready {
     min-height: 40px;
-    background-color: rgb(165, 205, 221);
     padding-left: 20px;
     list-style: none;
+    background-image: -webkit-linear-gradient(to bottom, rgb(151, 220, 247), rgb(122, 192, 209));
+    background-image: -moz-linear-gradient(to bottom, rgb(151, 220, 247), rgb(122, 192, 209));
+    background-image: -o-linear-gradient(to bottom, rgb(151, 220, 247), rgb(122, 192, 209));
+    background-image: linear-gradient(to bottom, rgb(151, 220, 247), rgb(122, 192, 209));
+    background-image: linear-gradient(to bottom, rgb(151, 220, 247), rgb(122, 192, 209));
 }
 
 .task {
     min-height: 40px;
     list-style: none;
     padding-left: 20px;
+    border-top: 1px solid #d5d5d5;
+    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.05));
+    background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.05));
+    background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.05));
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.05));
 }
 
 /*
@@ -124,7 +150,10 @@ a {
 
 /*zebra rows*/
 ul.zebra_row:nth-child(odd) {
-    background-color:rgb(235, 233, 233);
+    background-image: -webkit-linear-gradient(to bottom, rgb(243, 242, 242), #e1e1e1);
+    background-image: -moz-linear-gradient(to bottom, rgb(243, 242, 242), #e1e1e1);
+    background-image: -o-linear-gradient(to bottom, rgb(243, 242, 242), #e1e1e1);
+    background-image: linear-gradient(to bottom, rgb(243, 242, 242), #e1e1e1);
 }
 /*
 ==============
