--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -43,13 +43,14 @@
         <link rel="stylesheet" href='{{=URL("static","css/nanoscroller.css")}}' />
         
         <link rel="stylesheet" href='{{=URL("static","css/product_backlog.css")}}' />
+        <!-- google font -->
+        <link href='http://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
     </head>
     <body>
-        <div class="flash">{{=response.flash or ''}}</div>
-
         
         <div id="header">
-            <h1><a href="{{=URL('projects')}}">Scrumfor.me</a></h1>       
+            <h1><a href="{{=URL('projects')}}"><span class="color-logo">Scrumfor</span>.me</a></a></h1>       
+            <button id="toogle_sidebar" title="{{=T('Expand / Collapse Sidebar')}}" class="tip-right"><i class="icon-chevron-left icon-white"></i></button>
         </div>
 
         <div id="user-nav" class="navbar navbar-inverse">
@@ -77,7 +78,7 @@
             </ul>
         </div>
             
-        <div id="sidebar">
+        <div id="sidebar" class="close_sidebar">
             <a href="#" class="visible-phone"><i class="icon icon-home"></i> Dashboard</a>
             <ul>
                 <li class='{{=g_pagina_atual("default/index","active")}}'><a href='{{=URL("index")}}'><i class="icon icon-home"></i> <span>Dashboard</span></a></li>
